prevent layout shift on load

--- a/src/App.css
+++ b/src/App.css
@@ -27,7 +27,7 @@ body {
 
 #root {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 50% 50%;
   grid-template-rows: auto 1fr auto;
   margin: 0;
   padding: 0;
